# 27livro2_2cache2

./: .gitignore  README.md  cache_data.json  pyproject.toml
src/cache/: crew.py  main.py  pickle.py  test_import.py
src/cache/config/: agents.yaml  tasks.yaml
src/cache/tools/: search_tool.py
